@@ -1,8 +1,9 @@
-# $Id: Makefile.am,v 1.13 2005/07/30 09:01:22 freddy77 Exp $
+# $Id: Makefile.am,v 1.14 2006/03/27 07:22:54 jklowden Exp $
+AM_CPPFLAGS	=	-I$(top_srcdir)/include -I. -I$(SERVERDIR)
 bin_PROGRAMS	=	tdspool
+
 tdspool_SOURCES	=	config.c main.c member.c user.c util.c pool.h
 SERVERDIR	=	../server
-INCLUDES	=	-I$(top_srcdir)/include -I. -I$(SERVERDIR)
 LDADD		=	../server/libtdssrv.la $(NETWORK_LIBS)
 EXTRA_DIST	=	BUGS pool.conf
 
