@@ -1,8 +1,8 @@
-# $Id: Makefile.am,v 1.11 2005/12/21 14:02:49 freddy77 Exp $
+# $Id: Makefile.am,v 1.12 2006/03/27 07:22:54 jklowden Exp $
+AM_CPPFLAGS=			-I$(top_srcdir)/include
 noinst_LTLIBRARIES=		libreplacements.la
 libreplacements_la_SOURCES=	iconv.c
 libreplacements_la_LDFLAGS=
 libreplacements_la_LIBADD=	@LTLIBOBJS@
-INCLUDES=			-I$(top_srcdir)/include
 EXTRA_DIST=			asprintf.c vasprintf.c atoll.c strtok_r.c \
 	readpassphrase.c basename.c strlcpy.c strlcat.c
